--- a/v2/requirements.txt
+++ b/v2/requirements.txt
@@ -25,6 +25,7 @@ MarkupSafe==3.0.3
 mdurl==0.1.2
 mmh3==5.2.0
 multidict==6.7.1
+numpy==2.4.2
 packaging==26.0
 postgrest==2.28.0
 propcache==0.4.1
@@ -41,6 +42,7 @@ python-dotenv==1.2.1
 realtime==2.28.0
 requests==2.32.5
 rich==14.3.2
+scipy==1.17.0
 six==1.17.0
 storage3==2.28.0
 StrEnum==0.4.15
