--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,14 @@ pipeline/processed_data/
 green-path-ui/
 hope-graph-builder/
 venv/
+
+# Data files (CPCB, CSV, Excel)
+*.xlsx
+*.csv
+*.xls
+
+# WhatsApp exports
+WhatsApp*/
+
+# Kimi agent (external tool output)
+Kimi_Agent_*/
