--- a/v2/requirements.txt
+++ b/v2/requirements.txt
@@ -8,6 +8,7 @@ charset-normalizer==3.4.4
 click==8.3.1
 cryptography==46.0.5
 deprecation==2.1.0
+fpdf2==2.8.5
 Flask==3.1.2
 flask-cors==6.0.2
 fsspec==2026.2.0
