--- a/v2/requirements.txt
+++ b/v2/requirements.txt
@@ -59,3 +59,7 @@ websockets==15.0.1
 Werkzeug==3.1.5
 yarl==1.22.0
 zstandard==0.25.0
+
+# XGBoost ML (optional for training, inference works without it)
+xgboost>=2.0.0
+scikit-learn>=1.4.0
